mdapipkg/objects/Contact_Profile_Completion__c.object
<CustomObject>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Expertise__c</fullName>
        <label>Business Expertise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Information__c</fullName>
        <label>Business Information</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Role__c</fullName>
        <label>Business Role</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Scope__c</fullName>
        <label>Business Scope</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <label>Company Address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Industry_Category__c</fullName>
        <label>Company Industry Category</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Information__c</fullName>
        <label>Company Information</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completion_Percentage__c</fullName>
        <description>Please inform the Exchange API team when changes to this formula are anticipated/made.</description>
        <formula>(if  (Biography__c &gt;0,1,0) +
if  ( Business_Expertise__c &gt;0,1,0)+
if  ( Business_Phone__c  &gt;0,1,0)+
if  ( Education__c  &gt;0,1,0)+
if  ( External_Connection__c  &gt;0,1,0)+
if  ( Interests__c  &gt;0,1,0)+
if  ( Mobile_Phone__c  &gt;0,1,0)+
if  ( Primary_Address__c  &gt;0,1,0)+
if  ( Primary_Email__c  &gt;0,1,0)+
if  ( Profile_Picture_Upload__c  &gt;0,1,0)+
if  ( Social_Media__c  &gt;0,1,0) +
if ( Business_Role__c &gt;0,1,0) +
if ( Company_Name__c  &gt;0,1,0) +
if ( Company_Industry_Category__c  &gt;0,1,0) +
if ( Company_Type__c  &gt;0,1,0) +
if ( Company_Address__c  &gt;0,1,0) +
if ( Business_Scope__c  &gt;0,1,0) +
if ( Type_of_President__c  &gt;0,1,0) +
if (  Company_Size__c  &gt;0,1,0) 
)
/18</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Profile Completions</relationshipLabel>
        <relationshipName>Contact_Profile_Completions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_Connection__c</fullName>
        <label>External Connection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <label>Primary Address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profile_Picture_Upload__c</fullName>
        <label>Profile Picture Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Social_Media__c</fullName>
        <label>Social Media</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_of_President__c</fullName>
        <label>Type of President</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Contact Profile Completion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Primary_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Contact Profile Completion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Profile Completions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>